# infini-prompt

./: README.md  pyproject.toml
examples/: example.txt  example_json.txt  example_simple.txt  run_examples.py
infini_prompt/: __init__.py  __main__.py  prompt_generator.py  test_prompt_generator.py
